objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>LatAm_Platform_Product__c</fullName>
        <label>Platform/Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onesource Global Trade</fullName>
                </value>
                <value>
                    <fullName>Onesource – Produtos de Tax</fullName>
                </value>
                <value>
                    <fullName>Mastersaf</fullName>
                </value>
                <value>
                    <fullName>Checkpoint</fullName>
                </value>
                <value>
                    <fullName>Legal One Corporate</fullName>
                </value>
                <value>
                    <fullName>Legal One Firms</fullName>
                </value>
                <value>
                    <fullName>Domain Systems</fullName>
                </value>
                <value>
                    <fullName>Portifolio Corporate BR</fullName>
                </value>
                <value>
                    <fullName>Editorial Seal - Great Works</fullName>
                </value>
                <value>
                    <fullName>Editorial Seal - Best Seller</fullName>
                </value>
                <value>
                    <fullName>Editorial Seal - OAB</fullName>
                </value>
                <value>
                    <fullName>Editorial Seal - Back to School</fullName>
                </value>
                <value>
                    <fullName>Editorial Seal - Periodic</fullName>
                </value>
                <value>
                    <fullName>Editorial Seal - Universities</fullName>
                </value>
                <value>
                    <fullName>Editorial Seal - Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <label>Marketer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategy__c</fullName>
        <label>Marketing Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Cross-Sell</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Winback</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>Product Communication</fullName>
                </value>
                <value>
                    <fullName>Up-sell</fullName>
                </value>
                <value>
                    <fullName>Demand Creation</fullName>
                </value>
                <value>
                    <fullName>X-sell/Upsell</fullName>
                </value>
                <value>
                    <fullName>Build Awareness</fullName>
                </value>
                <value>
                    <fullName>Close Deals</fullName>
                </value>
                <value>
                    <fullName>Customer Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Team__c</fullName>
        <description>Field added as part of MCL-1486 Oct 2016 Release</description>
        <label>Marketing Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Operating_Unit__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Corp - Counsel</fullName>
                </value>
                <value>
                    <fullName>Corp - Investigative</fullName>
                </value>
                <value>
                    <fullName>Corp - Tax</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Govt - CMS</fullName>
                </value>
                <value>
                    <fullName>Govt - Investigative</fullName>
                </value>
                <value>
                    <fullName>Govt - Practice of Law</fullName>
                </value>
                <value>
                    <fullName>Large Law</fullName>
                </value>
                <value>
                    <fullName>Lead Flow</fullName>
                </value>
                <value>
                    <fullName>LEI</fullName>
                </value>
                <value>
                    <fullName>LES - Elite</fullName>
                </value>
                <value>
                    <fullName>LES - Tracker</fullName>
                </value>
                <value>
                    <fullName>LMLF - Biz Development</fullName>
                </value>
                <value>
                    <fullName>LMLF - Research &amp; Know How</fullName>
                </value>
                <value>
                    <fullName>LMLF - Software</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>LMS - Document Review</fullName>
                </value>
                <value>
                    <fullName>LMS - eDiscovery Management</fullName>
                </value>
                <value>
                    <fullName>Medium Law</fullName>
                </value>
                <value>
                    <fullName>Practical Law</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Productivity Solutions</fullName>
                </value>
                <value>
                    <fullName>SLF - Law Firm Management</fullName>
                </value>
                <value>
                    <fullName>SLF - Practice of Law</fullName>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                </value>
                <value>
                    <fullName>Super Lawyers</fullName>
                </value>
                <value>
                    <fullName>UKI - Brand Activation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <label>Offer Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operating_Unit__c</fullName>
        <description>Field added as part of MCL-1486 Oct 2016 Release</description>
        <label>Operating Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CANZ</fullName>
                </value>
                <value>
                    <fullName>Central Marketing Campaign Strategy</fullName>
                </value>
                <value>
                    <fullName>Corp-Global 7</fullName>
                </value>
                <value>
                    <fullName>Corp-Large</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Corp-SMB</fullName>
                </value>
                <value>
                    <fullName>Corp-Strategic</fullName>
                </value>
                <value>
                    <fullName>Corp-Unknown</fullName>
                </value>
                <value>
                    <fullName>Demand Center</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>FindLaw</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Large and Mid-Size Law Firm</fullName>
                </value>
                <value>
                    <fullName>Large Law</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Legal Managed Services (LMS)</fullName>
                </value>
                <value>
                    <fullName>LES</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>Pan Legal</fullName>
                </value>
                <value>
                    <fullName>Product Marketing</fullName>
                </value>
                <value>
                    <fullName>Small Law</fullName>
                </value>
                <value>
                    <fullName>Small Law Firm</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <description>Field added as part of MCL-1486 Oct 2016 Release.</description>
        <label>Primary Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3E</fullName>
                </value>
                <value>
                    <fullName>3E Budgeting and Forecasting</fullName>
                </value>
                <value>
                    <fullName>3E Data Insights</fullName>
                </value>
                <value>
                    <fullName>3E Image Connect</fullName>
                </value>
                <value>
                    <fullName>3E Templates</fullName>
                </value>
                <value>
                    <fullName>API Data Feeds (CS)</fullName>
                </value>
                <value>
                    <fullName>APRISS</fullName>
                </value>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>Business Development Premier (BDP)</fullName>
                </value>
                <value>
                    <fullName>Business Law Center</fullName>
                </value>
                <value>
                    <fullName>Camden (CS)</fullName>
                </value>
                <value>
                    <fullName>Case Notebook</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>Compliance Learning</fullName>
                </value>
                <value>
                    <fullName>Concourse</fullName>
                </value>
                <value>
                    <fullName>Connect4</fullName>
                </value>
                <value>
                    <fullName>Content Monitoring (CS)</fullName>
                </value>
                <value>
                    <fullName>Contract Express</fullName>
                </value>
                <value>
                    <fullName>Contract Management</fullName>
                </value>
                <value>
                    <fullName>Court Express</fullName>
                </value>
                <value>
                    <fullName>C-Track</fullName>
                </value>
                <value>
                    <fullName>Data Privacy Advisor</fullName>
                </value>
                <value>
                    <fullName>Deadline Assistant</fullName>
                </value>
                <value>
                    <fullName>Design Gallery</fullName>
                </value>
                <value>
                    <fullName>Document Review</fullName>
                </value>
                <value>
                    <fullName>Drafting Assistant</fullName>
                </value>
                <value>
                    <fullName>eBillingHub</fullName>
                </value>
                <value>
                    <fullName>eDiscovery Point</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Envision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>Marketing Theme for a program with a specific asset</description>
        <inlineHelpText>Marketing Theme for a program with a specific asset</inlineHelpText>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Content/On-Demand</fullName>
                </value>
                <value>
                    <fullName>Demo/Contact Sales</fullName>
                </value>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>Discounted Sales</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>IAST ABM</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>Life-cycle</fullName>
                </value>
                <value>
                    <fullName>Live Webinar</fullName>
                </value>
                <value>
                    <fullName>Tradeshow/Conference</fullName>
                </value>
                <value>
                    <fullName>TR Live Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <label>Promotion Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Number__c</fullName>
        <label>Promotion Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Holds Sales Org for Campaign</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BEJE</fullName>
                </value>
                <value>
                    <fullName>BKRS</fullName>
                </value>
                <value>
                    <fullName>CHWL</fullName>
                </value>
                <value>
                    <fullName>EDIC</fullName>
                </value>
                <value>
                    <fullName>GSI</fullName>
                </value>
                <value>
                    <fullName>LLEY</fullName>
                </value>
                <value>
                    <fullName>LLPA</fullName>
                </value>
                <value>
                    <fullName>LLUR</fullName>
                </value>
                <value>
                    <fullName>LPCL</fullName>
                </value>
                <value>
                    <fullName>LPTC</fullName>
                </value>
                <value>
                    <fullName>LRA</fullName>
                </value>
                <value>
                    <fullName>RV01</fullName>
                </value>
                <value>
                    <fullName>SMGE</fullName>
                </value>
                <value>
                    <fullName>SMHK</fullName>
                </value>
                <value>
                    <fullName>SMMY</fullName>
                </value>
                <value>
                    <fullName>SMSG</fullName>
                </value>
                <value>
                    <fullName>TSL</fullName>
                </value>
                <value>
                    <fullName>WEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Priority__c</fullName>
        <label>Sales Priority</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_CreatedBy_Name__c</fullName>
        <description>This field is used to store created by name in a text form.</description>
        <label>Source CreatedBy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_Date__c</fullName>
        <description>This field is used to store source created date.</description>
        <label>Source Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template_UserId__c</fullName>
        <label>Template UserId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Code__c</fullName>
        <label>Tracking Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Duration__c</fullName>
        <label>Trial Duration</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>CM_low_no_usage_campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
            <value>7014O000001BOeXQAW</value>
        </filters>
        <label>CM low/no usage campaign</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>C_S_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>connectandsell,C&amp;S,connect and sell</value>
        </filters>
        <label>C&amp;S Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <listViews>
        <fullName>X9001126</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tracking_Code__c</field>
            <operation>equals</operation>
            <value>7011B000002Kiel</value>
        </filters>
        <label>7011B000002Kiel</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>X9001127</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Tracking_Code__c</field>
            <operation>equals</operation>
            <value>9001127</value>
        </filters>
        <label>9001127</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <recordTypes>
        <fullName>GLI</fullName>
        <active>true</active>
        <description>Record Type for USL,FindLaw,LMS, and Elite users</description>
        <label>GLI</label>
    </recordTypes>
    <recordTypes>
        <fullName>S2E</fullName>
        <active>true</active>
        <label>S2E</label>
    </recordTypes>
    <recordTypes>
        <fullName>UKI</fullName>
        <active>true</active>
        <description>For GLI UKI user</description>
        <label>UKI</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>LCRM_Error_for_campaign_level</fullName>
        <active>true</active>
        <errorConditionFormula>AND
( $Setup.LTS_Disable_Application_Automation__c.LTS_Disable_Validation_Rules__c  = false,
NOT($Permission.Bypass_GLI_Campaign_and_Plan),
Is_GLI__c= TRUE,
OR
(
ISPICKVAL(Campaign_Level__c, &quot;Plan&quot;),
ISPICKVAL(Campaign_Level__c, &quot;Campaign&quot;)))</errorConditionFormula>
        <errorMessage>“Plan” and “Campaign” Records can only be created by Authorized Users. Please create a “Program” or “Tactic” instead.</errorMessage>
    </validationRules>
</CustomObject>